--- a/bin/install
+++ b/bin/install
@@ -1,3 +1,3 @@
-#!/usr/bin/env node
-const initPlugins = require('../lib/util/initPlugin').initPlugins;
+#!/usr/bin/env ts-node
+import {initPlugins} from '../src/util/initPlugin';
 initPlugins();
