--- a/bin/install
+++ b/bin/install
@@ -1,5 +1,7 @@
 #!/usr/bin/env node
 try {
+    console.log(process.config);
     const initPlugins = require('../lib/util/initPlugin').initPlugins;
     initPlugins();
+    console.log('done');
 } catch { }
