refactored startup and install

--- a/packages/cli/bin/install
+++ b/packages/cli/bin/install
@@ -1,5 +1,2 @@
 #!/usr/bin/env node
-try {
-    const initPlugins = require('../lib/util/initPlugin').initPlugins;
-    initPlugins();
-} catch { }
+try { require('../lib/bin/install').default(); } catch { }
